<resources>
    <string name="app_name">ProjetoFinal</string>
    <string name="title_activity_login">login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_bycomp">bycomp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Itens do menu de sanduiche-->
    <string name="menu_home">Bycomp</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_promocoes">Promoções</string>
    <string name="menu_avaliacoes">Avalições</string>
    <string name="menu_social">Social</string>
    <string name="menu_historico">Histórico</string>
    <string name="menu_adicionar">Adicionar nota fiscal </string>
    <string name="menu_perfil">Meu perfil </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Iniciar">Começar</string>
    <string name="iniciar">Iniciar</string>
    <string name="title_activity_fotos">fotos</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>